--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <includes>
+                        <include>**/*IT.java</include>
+                    </includes>
+                </configuration>
             </plugin>
 
         </plugins>
