--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ server.servlet.context-path=/Foyer
 
 ### logging.file.name=/home/sirine-naifar/Documents/myinfo-%d{yyyy-MM-dd}.%i.log
 ### logging.logback.rollingpolicy.max-file-size=10KB
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
