--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -5,4 +5,4 @@ scrape_configs:
   - job_name: 'springboot-app'
     metrics_path: /actuator/prometheus
     static_configs:
-      - targets: ['foyer-app:8086']
+      - targets: ['host.docker.internal:8086']
