--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,5 +40,23 @@ services:
     networks:
       - foyer-net
     restart: unless-stopped
+grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: 123456aA
+    volumes:
+      - grafana-data:/var/lib/grafana
+    networks:
+      - foyer-net
+    restart: unless-stopped
 
+volumes:
+  db-data:
+  grafana-data:
+
+networks:
+  foyer-net:
   
