Modification des fichiers

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,18 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Spring Boot Actuator pour le monitoring -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!-- Micrometer Prometheus pour les métriques -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
