--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
         <repository>
             <id>nexus</id>
             <name>Nexus Releases</name>
-            <url>http://localhost:8081/repository/maven-releases/</url>
+            <url>http://192.168.228.141:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>nexus</id>
