Modification des fichiers

--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,7 @@
         <snapshotRepository>
             <id>nexus</id>
             <name>Nexus Snapshots</name>
-            <url>http://localhost:8081/repository/maven-snapshots/</url>
+            <url>http://192.168.228.141:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
