Modification des fichiers

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,10 +1,8 @@
-# === H2 embedded database ===
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+server.port=8086
+server.servlet.context-path=/Foyer
 
-# === Hibernate / JPA ===
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+### logging.file.name=/home/sirine-naifar/Documents/myinfo-%d{yyyy-MM-dd}.%i.log
+### logging.logback.rollingpolicy.max-file-size=10KB
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
