--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -28,4 +28,9 @@ scrape_configs:
 
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090'] 
+      - targets: ['localhost:9090']
+
+  - job_name: 'jenkins'
+    static_configs:
+      - targets: ['172.29.215.125:8080']
+    metrics_path: '/prometheus' 
