--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -28,7 +28,7 @@ scrape_configs:
 
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['172.29.215.125:9090']
 
   - job_name: 'jenkins'
     static_configs:
