--- a/pom.xml
+++ b/pom.xml
@@ -167,12 +167,12 @@
         <repository>
             <id>deploymentRepo</id>
             <name>Nexus Releases Repository</name>
-            <url>http://192.168.228.141:8081/repository/maven-releases/</url>
+            <url>http://http://172.19.175.10:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>deploymentRepo</id>
             <name>Nexus Snapshots Repository</name>
-            <url>http://192.168.228.141:8081/repository/maven-snapshots/</url>
+            <url>http://http://172.19.175.10:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
